+ | started earluy ex01

--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -1,11 +1,9 @@
-NAME = animal
+NAME = brain
 
 SRC = main.cpp	\
 	Animal.cpp	\
-	Dog.cpp		\
-	Cat.cpp		\
-	WrongAnimal.cpp	\
-	WrongCat.cpp	\
+	Cat.cpp	\
+	Dog.cpp	\
 
 OBJ = $(SRC:.cpp=.o)
 
